--- a/DA/HW1/word2vec.ipynb
+++ b/DA/HW1/word2vec.ipynb
@@ -2,54 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "21c1fc12852c9c90",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-16T07:37:58.655746Z",
+     "start_time": "2023-10-16T07:37:58.550658Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "p = []\n",
+    "with open('nsmc/ratings_train.txt') as f:\n",
+    "    for ff in f:\n",
+    "        p.append(ff.split('\\t')[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "42fbdd31",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-16T07:37:59.709984Z",
+     "start_time": "2023-10-16T07:37:59.704230Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'cp949' codec can't decode byte 0xb3 in position 29: illegal multibyte sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mUnicodeDecodeError\u001B[0m                        Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnsmc/ratings_test.txt\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[1;32m----> 2\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[43mf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreadline\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n",
-      "\u001B[1;31mUnicodeDecodeError\u001B[0m: 'cp949' codec can't decode byte 0xb3 in position 29: illegal multibyte sequence"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/opt/python@3.11/bin/python3.11\n"
      ]
     }
    ],
    "source": [
-    "with open('nsmc/ratings_test.txt') as f:\n",
-    "    print(f.readline())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-15T13:58:53.362435600Z",
-     "start_time": "2023-10-15T13:58:53.336425Z"
-    }
-   },
-   "id": "21c1fc12852c9c90"
+    "import sys\n",
+    "print(sys.executable)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "c226a07f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-16T07:43:53.199338Z",
+     "start_time": "2023-10-16T07:43:53.188345Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import MeCab\n",
+    "m = MeCab.Tagger()\n",
+    "t = m.parse(p[1])\n",
+    "print(type(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "37ebbb88",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-16T07:41:38.944147Z",
+     "start_time": "2023-10-16T07:41:29.231911Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "# https://radimrehurek.com/gensim/models/word2vec.html\n",
     "from konlpy.tag import Okt\n",
     "from gensim.models import Word2Vec\n",
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
-    "from torch import matri\n",
-    "# 예시 데이터셋으로 불용어 제거와 명사 추출은 생략합니다.\n",
-    "# 실제 데이터셋에 따라 전처리 과정이 달라질 수 있습니다.\n",
+    "\n",
     "\n",
     "# 예시로 데이터를 구성해보겠습니다.\n",
-    "sentences = [['네이버', '영화', '리뷰', '데이터셋', '단어', '임베딩', '시각화'], ['불용어', '제거', '명사', '단어', '임베딩', '표현']]\n",
-    "\n",
     "# Word2Vec 모델 학습\n",
-    "model = Word2Vec(sentences, size=100, window=5, min_count=1, workers=4)\n",
+    "model = Word2Vec(p, vector_size=100, window=5, min_count=1, workers=4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6cef18ab",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-16T07:41:41.766401Z",
+     "start_time": "2023-10-16T07:41:41.505267Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"Key '이별의' not present\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[11], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m vector \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mwv\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m이별의\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[1;32m      2\u001B[0m vector\n",
+      "File \u001B[0;32m/usr/local/lib/python3.11/site-packages/gensim/models/keyedvectors.py:403\u001B[0m, in \u001B[0;36mKeyedVectors.__getitem__\u001B[0;34m(self, key_or_keys)\u001B[0m\n\u001B[1;32m    389\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Get vector representation of `key_or_keys`.\u001B[39;00m\n\u001B[1;32m    390\u001B[0m \n\u001B[1;32m    391\u001B[0m \u001B[38;5;124;03mParameters\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    400\u001B[0m \n\u001B[1;32m    401\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    402\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(key_or_keys, _KEY_TYPES):\n\u001B[0;32m--> 403\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_vector\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey_or_keys\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    405\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m vstack([\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_vector(key) \u001B[38;5;28;01mfor\u001B[39;00m key \u001B[38;5;129;01min\u001B[39;00m key_or_keys])\n",
+      "File \u001B[0;32m/usr/local/lib/python3.11/site-packages/gensim/models/keyedvectors.py:446\u001B[0m, in \u001B[0;36mKeyedVectors.get_vector\u001B[0;34m(self, key, norm)\u001B[0m\n\u001B[1;32m    422\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_vector\u001B[39m(\u001B[38;5;28mself\u001B[39m, key, norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m):\n\u001B[1;32m    423\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Get the key's vector, as a 1D numpy array.\u001B[39;00m\n\u001B[1;32m    424\u001B[0m \n\u001B[1;32m    425\u001B[0m \u001B[38;5;124;03m    Parameters\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    444\u001B[0m \n\u001B[1;32m    445\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 446\u001B[0m     index \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_index\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    447\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m norm:\n\u001B[1;32m    448\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfill_norms()\n",
+      "File \u001B[0;32m/usr/local/lib/python3.11/site-packages/gensim/models/keyedvectors.py:420\u001B[0m, in \u001B[0;36mKeyedVectors.get_index\u001B[0;34m(self, key, default)\u001B[0m\n\u001B[1;32m    418\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m default\n\u001B[1;32m    419\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m--> 420\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mKey \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mkey\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m not present\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mKeyError\u001B[0m: \"Key '이별의' not present\""
+     ]
+    }
+   ],
+   "source": [
+    "vector = model.wv['이별의']\n",
+    "vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c032257964fb7916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 시각화를 위한 차원 축소\n",
-    "X = model[model.wv.vocab]\n",
+    "X = model.wv.index_to_key\n",
     "pca = PCA(n_components=2)\n",
     "result = pca.fit_transform(X)\n",
     "\n",
@@ -59,43 +143,26 @@
     "for i, word in enumerate(words):\n",
     "    plt.annotate(word, xy=(result[i, 0], result[i, 1]))\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-10-15T13:56:47.025630800Z"
-    }
-   },
-   "id": "700893eb2667a894"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c032257964fb7916"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
